chore: naming fixes
